--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="keywords" content="HTLM, CSS" />
   <meta name="description" content="Strava race" />
-  <link rel="stylesheet" type="text/css" href="style.css" />
+  <link rel="stylesheet" type="text/css" href="tyle.css" />
   <!-- 
         Description er hva som kommer i google soket
     -->
