--- a/mandenslop.html
+++ b/mandenslop.html
@@ -27,7 +27,21 @@
     </div>
   </div>
 
+  <div class="box">
+    <p>I mai går løpet rundt lutvan. Løypen starter på sti ut fra Lindeberg utfartsparkering og avsluttes med Lutvann
+      leir. Teknisk krevende og
+      kupert løype. Det er lurt å følge nøye med på kartet da det er mye små stier rundt vannet. Samt en avstikker på
+      småsti litt før toppen av bakken opp fra Lutvann. Her er et fint utkikspunkt over fjorden. Det er en rute på sti,
+      med unntak av en avsluttning på bred grusvei. Så her er det mye å hente på innsputen. Løp fort, og forsiktig!
+    </p>
 
+    <a href="https://www.strava.com/routes/2822898418313915838" target="_blank">Løypen</a>
+    <a href="Strava race #2 Lutvann.gpx" download>Last ned GPX</a>
+    <a href="https://www.strava.com/segments/28233829" target="_blank">Strava segment</a>
+    <p>&nbsp;</p>
+
+    <img src="Images/lutvann.png" alt="kart av ruten">
+  </div>
 
   <div class="box">
     <p>I april går løpet på Veitvet. Det er en rute med grus, sti og asfalt. Her finner du likt til segmentet på strava,
