--- a/mandenslop.html
+++ b/mandenslop.html
@@ -40,7 +40,7 @@
     <a href="https://www.strava.com/segments/28233829" target="_blank">Strava segment</a>
     <p>&nbsp;</p>
 
-    <img src="Images/lutvann.png" alt="kart av ruten">
+    <img src="Images/lutvann.png" width="650" alt="kart av ruten">
   </div>
 
   <div class="box">
