--- a/mandenslop.html
+++ b/mandenslop.html
@@ -28,6 +28,7 @@
   </div>
 
   <div class="box">
+    <h2>Mai</h2>
     <p>I mai går løpet rundt lutvan. Løypen starter på sti ut fra Lindeberg utfartsparkering og avsluttes med Lutvann
       leir. Teknisk krevende og
       kupert løype. Det er lurt å følge nøye med på kartet da det er mye små stier rundt vannet. Samt en avstikker på
@@ -44,6 +45,7 @@
   </div>
 
   <div class="box">
+    <h2>April</h2>
     <p>I april går løpet på Veitvet. Det er en rute med grus, sti og asfalt. Her finner du likt til segmentet på strava,
       linkt til ruten på strava og mulighet til å laste ned en GPX fil. De som har gode løpe kolkker kan laste opp gpx
       fil og kunne følge mde på ruten mens man løper. Man kan også laste ned GPXviewer på mobilen for å laste opp ruten
