--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       <a href="">
         <img src="Images/icons8-share-96 (1).png" width="25" alt="Bilde" />
       </a>
+      <a href="easteregg.html"><img src="Images/eastereggbutton.png" alt="Easteregg button"></a></a>
 
 
     </div>
