--- a/mandenslop.html
+++ b/mandenslop.html
@@ -37,7 +37,7 @@
     </p>
 
     <a href="https://www.strava.com/routes/2822898418313915838" target="_blank">Løypen</a>
-    <a href="Strava race #2 Lutvann.gpx" download>Last ned GPX</a>
+    <a href="/Strava race #2 Lutvann.gpx" download>Last ned GPX</a>
     <a href="https://www.strava.com/segments/28233829" target="_blank">Strava segment</a>
     <p>&nbsp;</p>
 
