--- a/mandenslop.html
+++ b/mandenslop.html
@@ -41,7 +41,7 @@
     <a href="https://www.strava.com/segments/28233829" target="_blank">Strava segment</a>
     <p>&nbsp;</p>
 
-    <img src="Images/lutvann.png" width="650" alt="kart av ruten">
+    <img class="kart" src="Images/lutvann.png" width="650" alt="kart av ruten">
   </div>
 
   <div class="box">
@@ -56,7 +56,7 @@
     <a href="https://www.strava.com/segments/27897733" target="_blank">Strava segment</a>
     <p>&nbsp;</p>
 
-    <img src="Images/Skjermbilde 2021-04-26 kl. 11.07.09.png" alt="kart av ruten">
+    <img class="kart" src="Images/Skjermbilde 2021-04-26 kl. 11.07.09.png" alt="kart av ruten">
   </div>
 
   <!-- <a href="#">Jump to top</a> -->
