--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
     man vil. Lykke til!
   </div>
 
+  <img class="skog" src="Images/skog.jpg" alt="Bilde av skog">
+
   <!-- <a href="#">Jump to top</a> -->
 
   <div class="buttom">
