--- a/mandenslop.html
+++ b/mandenslop.html
@@ -37,8 +37,9 @@
     </p>
 
     <a href="https://www.strava.com/routes/2822898418313915838" target="_blank">Løypen</a>
-    <a href="/Strava race #2 Lutvann.gpx" download>Last ned GPX</a>
+    <a href="Strava race mai.gpx" download>Last ned GPX</a>
     <a href="https://www.strava.com/segments/28233829" target="_blank">Strava segment</a>
+
     <p>&nbsp;</p>
 
     <img class="kart" src="Images/lutvann.png" width="650" alt="kart av ruten">
