--- a/easteregg.html
+++ b/easteregg.html
@@ -27,7 +27,8 @@
   </div>
 
   <h2>Easteregg</h2>
-
+  <p>Takk for hjelp til nettsiden! Du er råkul Christian Ekrem!</p>
+  <p>Her er en video som jeg la inn for å øve på å kode</p>
   <video controls autoplay loop src="Video/running.video.mp4" width="800px">Your web browser does not support this
     video</video>
 
