--- a/mandenslop.html
+++ b/mandenslop.html
@@ -29,11 +29,12 @@
 
   <div class="box">
     <h2>Mai</h2>
-    <p>I mai går løpet rundt lutvan. Løypen starter på sti ut fra Lindeberg utfartsparkering og avsluttes med Lutvann
-      leir. Teknisk krevende og
-      kupert løype. Det er lurt å følge nøye med på kartet da det er mye små stier rundt vannet. Samt en avstikker på
-      småsti litt før toppen av bakken opp fra Lutvann. Her er et fint utkikspunkt over fjorden. Det er en rute på sti,
-      med unntak av en avsluttning på bred grusvei. Så her er det mye å hente på innsputen. Løp fort, og forsiktig!
+    <p>I mai går løpet rundt Lutvann. Løypen starter på sti ut fra Lindeberg utfartsparkering og avsluttes ved Lutvann
+      leir. Det er en teknisk krevende og
+      kupert løype. Det er lurt å følge nøye med på kartet da det er mange små stier og stivalg rundt vannet. Vær obs på
+      at det er en avstikker fra hovedstien rett før toppen av bakken fra Lutvann. Her er et fint utkikkspunkt over
+      Oslo. Løypen avsluttes på bred grusvei. Her er det mye å hente med en kraftig tempoøkning i innspurten.
+      Løp fort og forsiktig!
     </p>
 
     <a href="https://www.strava.com/routes/2822898418313915838" target="_blank">Løypen</a>
@@ -72,7 +73,7 @@
 
       <!-- Link til dele sosiale medier-->
       <a href="">
-        <img src="Images/icons8-share-96 (1).png" width="25" alt="Bilde" />
+        <img src="Images/icons8-share-96 (1).png" width="25" alt="Del" />
       </a>
 
 
