--- a/resultater.html
+++ b/resultater.html
@@ -27,10 +27,12 @@
 
   <div class="box">
 
-    <p>Det er fortsatt noen dager igjen for å avgjøre det endelige resultatet i april. Løp fort! Løp trygt! Særlig når
-      du krysser veien på Rødtvet.</p>
+    <p>April er over og seieren gikk til Kjartan Ørnes som løp på 19:16! Godt jobba! Nå ligger neste måneds løp ute.
+      Lykke
+      til! </p>
+
     <div class="iframe">
-      <iframe src="https://stravasegway.herokuapp.com/27897733" frameborder="0" width="670px" height=" 300"></iframe>
+      <iframe src="https://stravasegway.herokuapp.com/27897733" frameborder="0" width="90%" height=" 300"></iframe>
     </div>
     <p>Sjekk ut Strava for detaljer:</p>
     <a href="https://www.strava.com/segments/27897733" target="_blank">Strava segment</a>
