--- a/easteregg.html
+++ b/easteregg.html
@@ -18,7 +18,7 @@
 
 <body>
   <div class="header">
-    <h1>Strava Race</h1>
+    <h1>STRAVA LØP</h1>
     <div class="nav">
       <button class="button"><a href="index.html">Om løpet</a></button>
       <button class="button"><a href="mandenslop.html">Månedens løp</a></a></button>
