--- a/resultater.html
+++ b/resultater.html
@@ -17,7 +17,7 @@
 
 <body>
   <div class="header">
-    <h1>Strava Race</h1>
+    <h1>STRAVA LØP</h1>
     <div class="nav">
       <button class="button"><a href="index.html">Om løpet</a></button>
       <button class="button"><a href="mandenslop.html">Månedens løp</a></a></button>
@@ -32,7 +32,7 @@
       til! </p>
 
     <div class="iframe">
-      <iframe src="https://stravasegway.herokuapp.com/27897733" frameborder="0" width="90%" height=" 300"></iframe>
+      <iframe src="https://stravasegway.herokuapp.com/27897733" frameborder="0" width="100%" height=" 300"></iframe>
     </div>
     <p>Sjekk ut Strava for detaljer:</p>
     <a href="https://www.strava.com/segments/27897733" target="_blank">Strava segment</a>
